--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -138,4 +138,10 @@
   blockquote {
     @apply mt-6 border-l-2 pl-6 italic;
   }
+  .page-container {
+    @apply flex flex-col items-center justify-between sm:py-8;
+  }
+  .page-card {
+    @apply flex min-h-[80vh] w-full max-w-screen-xl flex-col p-2 sm:p-4 md:p-8;
+  }
 }
