--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -69,7 +69,7 @@
 
     --vis-primary-color: var(--primary);
     /* change to any hsl value you want */
-    --vis-secondary-color: 160 81% 40%;
+    --vis-secondary-color: var(--red);
     --vis-text-color: var(--muted-foreground);
   }
 
@@ -138,7 +138,8 @@
 
     --vis-primary-color: var(--primary);
     /* change to any hsl value you want */
-    --vis-secondary-color: 160 81% 40%;
+    --vis-secondary-color: var(--red);
+
     --vis-text-color: var(--muted-foreground);
   }
 }
